--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.impalatamer.ecm.MainActivity">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textAlignment="center"
+        android:text="@string/app_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/main_spacing"
+        android:textSize="24sp" />
+
+    <AutoCompleteTextView
+        android:id="@+id/enterContact"
+        android:text="Enter Contact"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/title"
+        android:layout_marginBottom="@dimen/main_spacing" />
+
+    <AutoCompleteTextView
+        android:id="@+id/enterFrequency"
+        android:text="Enter Frequency"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/enterContact"
+        android:layout_marginBottom="@dimen/main_spacing" />
+
+    <Switch
+        android:id="@+id/onOffSwitch"
+        android:layout_below="@+id/enterFrequency"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/main_spacing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        android:text="Notifications: "
+        android:textSize="18sp"
+        android:textOff="OFF"
+        android:textOn="ON"/>
+
+    <Button
+        android:id="@+id/saveButton"
+        android:text="Save"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/onOffSwitch" />
 
 </RelativeLayout>
