--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/title"/>
 
     <AutoCompleteTextView
-        android:text="Name Of Contact"
+        android:text=""
         android:layout_centerHorizontal="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
